Fixed overflow on image

--- a/src/Master/Components/CardModal/cardModal.module.scss
+++ b/src/Master/Components/CardModal/cardModal.module.scss
@@ -37,7 +37,7 @@
   width: 100%;
   height: 100%;
 
-  overflow: auto;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
